<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">hKtweaks</string>
    <string name="checking_root">Checking root access</string>
    <string name="searching_busybox">Searching for busybox</string>
    <string name="collecting_info">Collecting info</string>
    <string name="no_root">No root</string>
    <string name="no_busybox">No busybox</string>
    <string name="open">Open %s</string>
    <string name="changelog">hKtweaks v%s</string>
    <string name="close">Close</string>
    <string name="password">Password</string>
    <string name="password_wrong">Password is wrong</string>
    <string name="select_picture">Select Picture</string>
    <string name="no_picture">No Picture</string>
    <string name="went_wrong">Something went wrong!</string>
    <string name="press_back_again_exit">Press back again to exit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="unknown">Unknown</string>
    <string name="used">used</string>
    <string name="free">free</string>
    <string name="total">total</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">This feature is only available when the donation app is installed! Don\'t worry though. Because this app is open source you can easily build it yourself and remove this check. But I hope you support developers anyway. Thanks for using Kernel Adiutor! Once you bought the donation app you have to restart Kernel Adiutor in order to enable all features.</string>
    <string name="donate_nope">I won\'t fall for this scam!</string>
    <string name="donate_yes">I love this app. Must donate!</string>
    <string name="warning">Warning</string>
    <string name="apply_on_boot">Apply on boot</string>
    <string name="apply_on_boot_text">Applying settings in %d seconds.</string>
    <string name="apply_on_boot_complete">Applying settings completed.</string>
    <string name="apply_on_boot_canceled">Applying settings canceled.</string>
    <string name="not_in_range">Not in range</string>
    <string name="options">Options</string>
    <string name="more">More</string>
    <string name="def">Default</string>
    <string name="permission_denied_write_storage">Permission denied for writing to storage!</string>
    <string name="save">Save</string>
    <string name="select_question">Select %s?</string>
    <string name="wrong_extension">Please select a file with %s extension.</string>
    <string name="mhz">MHz</string>
    <string name="celsius">ºC</string>
    <string name="fahrenheit">ºF</string>
    <string name="mb">MB</string>
    <string name="ms">ms</string>
    <string name="mv">mV</string>
    <string name="min">min</string>
    <string name="mah">mAh</string>
    <string name="ma">mA</string>
    <string name="kb">kB</string>
    <string name="px">px</string>
    <string name="percent">%</string>
    <string name="db">dB</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="statistics">Statistics</string>
    <string name="kernel">Kernel</string>
    <string name="voltage_control">Voltage Control</string>
    <string name="tools">Tools</string>
    <string name="other">Other</string>
    <string name="overall">Overall</string>
    <string name="device">Device</string>
    <string name="memory">Memory</string>
    <string name="inputs">Inputs</string>
    <string name="cpu">CPU</string>
    <string name="cpu_hotplug">CPU Hotplug</string>
    <string name="thermal">Thermal</string>
    <string name="gpu">GPU</string>
    <string name="screen">Screen</string>
    <string name="wake">Wake</string>
    <string name="sound">Sound</string>
    <string name="battery">Battery</string>
    <string name="led">LED</string>
    <string name="io_scheduler">I/O Scheduler</string>
    <string name="ksm">Kernel Samepage Merging</string>
    <string name="lmk">Low Memory Killer</string>
    <string name="virtual_memory">Virtual Memory</string>
    <string name="entropy">Entropy</string>
    <string name="misc">Misc</string>
    <string name="cpucl1_voltage">CPU big Voltage</string>
    <string name="cpucl0_voltage">CPU LITTLE Voltage</string>
    <string name="busMif_voltage">Bus MIF Voltages</string>
    <string name="busInt_voltage">Bus INT Voltages</string>
    <string name="busDisp_voltage">Bus DISP Voltages</string>
    <string name="busCam_voltage">Bus CAM Voltages</string>
    <string name="data_sharing">Data Sharing</string>
    <string name="custom_controls">Custom Controls</string>
    <string name="downloads">Downloads</string>
    <string name="backup">Backup</string>
    <string name="build_prop_editor">Build prop Editor</string>
    <string name="profile">Profile</string>
    <string name="recovery">Recovery</string>
    <string name="initd">Init.d</string>
    <string name="on_boot">On Boot</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="offline">Offline</string>
    <string name="core">Core %d</string>
    <string name="gpu_freq">GPU Frequency</string>
    <string name="refresh">Refresh</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>
    <string name="cluster_big" translatable="false">big</string>
    <string name="cluster_middle" translatable="false">Middle</string>
    <string name="cluster_little" translatable="false">LITTLE</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="uptime">Uptime</string>
    <string name="error_frequencies">Failed to load frequencies</string>
    <string name="unused_frequencies">Unused Frequencies</string>
    <string name="gpu_usage">GPU Usage</string>
    <string name="manufactured_date">Manufacturing Date</string>
    <string name="vendor">Vendor</string>
    <string name="features">Features</string>
    <string name="ram">RAM</string>
    <string name="android_version">Android Version</string>
    <string name="android_api_level">Android SDK</string>
    <string name="android_codename">Android Codename</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="build_display_id">Build Display ID</string>
    <string name="baseband">Baseband</string>
    <string name="rom">ROM</string>
    <string name="bootloader">Bootloader</string>
    <string name="trustzone" translatable="false">TrustZone</string>
    <string name="hardware">Hardware</string>
    <string name="architecture">Architecture</string>
    <string name="asv">ASV</string>
    <string name="bus">Bus</string>
    <string name="product">Product</string>
    <string name="version">Version</string>
    <string name="sysfs" translatable="false">Sysfs</string>
    <string name="handlers">Handlers</string>
    <string name="cores_string">%s cores</string>
    <string name="frequencies_string">%s frequencies</string>
    <string name="governors_string">%s governors</string>
    <string name="cores_singular">%d core</string>
    <string name="cores">%d cores</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="cpu_usage_string">%s CPU Usage</string>
    <string name="no_offline_core">You can\'t offline this core!</string>
    <string name="cpu_max_freq">CPU Maximum Frequency</string>
    <string name="cpu_max_freq_summary">Set the maximum frequency the CPU scales up to.</string>
    <string name="cpu_min_freq">CPU Minimum Frequency</string>
    <string name="cpu_min_freq_summary">Set the minimum frequency the CPU scales down to.</string>
    <string name="cpu_max_screen_off_freq">CPU Maximum Screen Off Frequency</string>
    <string name="cpu_max_screen_off_freq_summary">Set the maximum frequency the CPU scales up to when the screen is off.</string>
    <string name="cpu_governor">CPU Governor</string>
    <string name="cpu_governor_summary">The CPU governor determines how the CPU behaves in response to changes in workload. Changing the governor will impact how the CPU scales through the frequency steps available to your CPU.</string>
    <string name="cpu_governor_tunables">CPU Governor Tunables</string>
    <string name="governor_tunables_summary">The various configuration items which are Governor-dependent.</string>
    <string name="cpu_governor_tunables_read_error">Failed to read current governor of CPU.\n\nIf you are using a QCOM big.LITTLE device this is a known problem. The system forces the CPU to turn off cores making it extremely hard to read out CPU specific stats. Try to select this option again. The CPU sometimes refuses to turn on a core.</string>
    <string name="delay">Delay</string>
    <string name="test">Test</string>
    <string name="title">Title</string>
    <string name="required">required</string>
    <string name="hit_test">You have to hit test first!</string>
    <string name="output">Output</string>
    <string name="general">General</string>
    <string name="reset_data_title">Restore application</string>
    <string name="reset_data_summary">Clear data and restore the application settings</string>
    <string name="fahrenheit_title">Fahrenheit</string>
    <string name="fahrenheit_summary">Use fahrenheit to measure temperature.</string>
    <string name="force_english">Force displaying english language</string>
    <string name="user_interface">User interface</string>
    <string name="system_default">System default</string>
    <string name="theme_color_summary">Change the app color.</string>
    <string name="primary_color">Primary color</string>
    <string name="apply_on_boot_test_summary">Test apply on boot. This includes all kind of things which are getting applied during booting, such as custom controls, profiles, init.d, etc.</string>
    <string name="hide">Hide</string>
    <string name="apply_on_boot_hide_summary">Hide the notification of apply on boot. Delay will still remain!</string>
    <string name="toast">Toast</string>
    <string name="apply_on_boot_toast_summary">Show toast when settings got applied.</string>
    <string name="confirmation_notification">Confirmation Notification</string>
    <string name="apply_on_boot_confirmation_notification_summary">After apply on boot with visible notification, show a notification afterwards with the confirmation that apply on boot was successful.</string>
    <string name="script">Script</string>
    <string name="apply_on_boot_script_summary">Use a shell script to apply settings. Please only enable this if you have troubles with apply on boot. If the problem still persists after enabling this option, please make sure no other app is conflicting with hKtweaks.</string>
    <string name="debugging">Debugging</string>
    <string name="logcat">Logcat</string>
    <string name="logcat_summary">Copy logcat to /sdcard/logcat.txt</string>
    <string name="last_kmsg">Last Kernel Message</string>
    <string name="last_kmsg_summary">Copy /proc/last_kmsg to /sdcard/last_kmsg.txt</string>
    <string name="driver_message">Driver Message</string>
    <string name="driver_message_summary">Copy driver message (dmesg) to /sdcard/dmesg.txt</string>
    <string name="security">Security</string>
    <string name="set_password">Set Password</string>
    <string name="set_password_summary">You can protect hKtweaks by setting up a password. Every time you open this application, you have to enter it. If you forget it, simply wipe the data of this application in settings of your device. Don\'t worry I won\'t share your password.</string>
    <string name="delete_password">Delete Password</string>
    <string name="fingerprint_summary">Use fingerprint to pass security check. This will work as long you have fingerprints registered.</string>
    <string name="sections">Sections</string>
    <string name="developers">Developers</string>
    <string name="libraries">Libraries</string>
    <string name="github" translatable="false">Github</string>
</resources>