<?xml version="1.0" encoding="utf-8"?>
<de.dlyt.yanndroid.oneui.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="user_interface"
        android:title="@string/user_interface">
        <HorizontalRadioPreference
            android:key="dark_mode"
            app:entries="@array/preferences_darkmode_entries"
            app:entriesImage="@array/preferences_darkmode_entries_image"
            app:entryValues="@array/preferences_darkmode_values"
            app:viewType="image" />
        <SwitchPreference
            android:key="dark_mode_auto"
            android:title="@string/system_default" />
        <SwitchPreference
            android:key="use_oui4_theme"
            android:title="@string/use_oui4_theme" />
        <ColorPickerPreference
            android:key="theme_color"
            android:summary="@string/theme_color_summary"
            android:title="@string/primary_color"
            app:pickerType="classic" />
        <SwitchPreference
            android:key="forceenglish"
            android:title="@string/force_english" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="general"
        android:title="@string/general">
        <Preference
            android:key="reset_data"
            android:summary="@string/reset_data_summary"
            android:title="@string/reset_data_title" />
        <SwitchPreference
            android:key="useretardedmeasurement"
            android:summary="@string/fahrenheit_summary"
            android:title="@string/fahrenheit_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/apply_on_boot">
        <ListPreference
            android:defaultValue="10"
            android:entries="@array/apply_on_boot_delay_entries"
            android:entryValues="@array/apply_on_boot_delay_values"
            android:key="applyonbootdelay"
            android:summary="%s"
            android:title="@string/delay" />
        <Preference
            android:key="applyonboottest"
            android:summary="@string/apply_on_boot_test_summary"
            android:title="@string/test" />
        <SwitchPreference
            android:key="applyonboothide"
            android:summary="@string/apply_on_boot_hide_summary"
            android:title="@string/hide" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="applyonbootconfirmationnotification"
            android:summary="@string/apply_on_boot_confirmation_notification_summary"
            android:title="@string/confirmation_notification" />
        <SwitchPreference
            android:key="applyonboottoast"
            android:summary="@string/apply_on_boot_toast_summary"
            android:title="@string/toast" />
        <SwitchPreference
            android:key="applyonbootscript"
            android:summary="@string/apply_on_boot_script_summary"
            android:title="@string/script" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="debugging_category"
        android:title="@string/debugging">
        <Preference
            android:key="logcat"
            android:summary="@string/logcat_summary"
            android:title="@string/logcat" />
        <Preference
            android:key="lastkmsg"
            android:summary="@string/last_kmsg_summary"
            android:title="@string/last_kmsg" />
        <Preference
            android:key="dmesg"
            android:summary="@string/driver_message_summary"
            android:title="@string/driver_message" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="security_category"
        android:title="@string/security">
        <Preference
            android:key="set_password"
            android:summary="@string/set_password_summary"
            android:title="@string/set_password" />
        <Preference
            android:key="delete_password"
            android:title="@string/delete_password" />
        <SwitchPreference
            android:key="fingerprint"
            android:summary="@string/fingerprint_summary"
            android:title="@string/fingerprint" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="sections"
        android:title="@string/sections" />

</de.dlyt.yanndroid.oneui.preference.PreferenceScreen>
