<?xml version="1.0" encoding="utf-8"?>
<de.dlyt.yanndroid.oneui.layout.AboutPage xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/about_github"
        style="@style/ButtonStyle.AboutPage"
        android:text="@string/github"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle.AboutPage"
        android:onClick="openDevs"
        android:text="@string/developers" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle.AboutPage"
        android:onClick="openLibs"
        android:text="@string/libraries" />

</de.dlyt.yanndroid.oneui.layout.AboutPage>