<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.dlyt.yanndroid.oneui.layout.SplashView
        android:id="@+id/splash_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:animation="@anim/splash_animation"
        app:background_image="@drawable/ic_splash_background"
        app:foreground_image="@drawable/ic_launcher_foreground"
        app:text="@string/app_name" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <de.dlyt.yanndroid.oneui.view.ProgressBar
            style="@style/ProgressBarStyle.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/root_access_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checking_root"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/busybox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searching_busybox"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/info_collect_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collecting_info"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
