<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:focusable="true"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                style="?textAppearanceListItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/required_text"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/required"
                android:textStyle="bold|italic"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/summary"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:scrollbars="horizontal">

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/test_text"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/hit_test"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/test_button"
            style="@style/ButtonStyle.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="true"
            android:text="@string/test" />

        <LinearLayout
            android:id="@+id/output_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/output_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/output"
                android:textColor="?android:attr/textColorPrimary" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarSize="2dp"
                android:scrollbars="horizontal">

                <TextView
                    android:id="@+id/output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />
            </HorizontalScrollView>

            <de.dlyt.yanndroid.oneui.view.ProgressBar
                android:id="@+id/progress"
                style="@style/ProgressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
